--- a/quiz.kv
+++ b/quiz.kv
@@ -1,4 +1,14 @@
 #: import get_color_from_hex kivy.utils.get_color_from_hex
+<StartScreen>:
+    name: "start"
+    canvas.before :
+        Color:
+            rgba:0.8,0.8,0.8,1
+        Rectangle:
+            size : self.size
+            pos: self.pos
+
+
 <DisplayScreen>:
     name:"mainscreen"
     canvas.before :
@@ -13,10 +23,6 @@
             source:'assets/Quiz.png'
             pos: root.width * 0.1, root.height *0.9
             size: root.width * 0.8, root.height *0.1
-        Image:
-            source:'assets/questionPlate.png'
-            pos: root.width * 0.01, root.height *0.01
-            size: root.width * 0.6, root.height *0.9
 
         BtnBhv:
             id: trueBtn
@@ -24,24 +30,25 @@
             on_press: root.pressed('trueBtn')
             pos: root.width * 0.4, root.height *0.6
             size: root.width * 0.8, root.height *0.1
+            keep_ratio: False
         BtnBhv:
             id: falseBtn
             source:'assets/falseButton.png'
             on_press: root.pressed('falseBtn')
-            pos: root.width * 0.4, root.height *0.5
+            pos: root.width * 0.4, root.height *0.4
             size: root.width * 0.8, root.height *0.1
         BtnBhv:
             source:'assets/Next.png'
             on_press: root.next_pressed()
-            pos: root.width * 0.4, root.height *0.3
+            pos: root.width * 0.4, root.height *0.2
             size: root.width * 0.8, root.height *0.1
 
     MDLabel:
         text: root.display_text
         font_name: 'Minicupcake.otf'
-        font_size: '20sp'
+        font_size: '30sp'
         pos: root.width * 0.2, root.height *0.4
-        size: root.width * 0.25, root.height *0.2
+        size: root.width * 0.35, root.height *0.35
         size_hint:None,None
 
 
@@ -63,17 +70,19 @@
     Widget:
         BtnBhv:
             id: restartBtn
-            source:'assets/restartButton.png'
+            source:'assets/resetButton.png'
             on_press: root.reset_quiz()
-            pos: root.width * 0.2,root.height*0.3
+            pos: root.width * 0.0,root.height*0.3
+            size: root.width * 0.8, root.height *0.1
         BtnBhv:
             id: quitBtn
-            source:'assets/quitButton.png'
+            source:'assets/endButton.png'
             on_press: root.quit_app()
-            pos: root.width * 0.5,root.height*0.3
+            pos: root.width * 0.37,root.height*0.3
+            size: root.width * 0.8, root.height *0.1
         Label:
             text: root.final_score
             color:0.2,0.2,0.2,1
             bold: True
-            pos: root.width * 0.4, root.height * 0.45
-            font_size: "20sp"
+            pos: root.width * 0.48, root.height * 0.45
+            font_size: "35sp"
