--- a/quiz.kv
+++ b/quiz.kv
@@ -1,4 +1,4 @@
-#: import get_color_from_hex kivy.utils.get_color_from_hex
+ki#: import get_color_from_hex kivy.utils.get_color_from_hex
 <StartScreen>:
     name: "start"
     canvas.before :
@@ -85,4 +85,4 @@
             color:0.2,0.2,0.2,1
             bold: True
             pos: root.width * 0.48, root.height * 0.45
-            font_size: "35sp"
+            font_size: "30sp"
